test/should-fail/jfxc4173a.fx
/**
 * Regress test for JFXC-4173.
 *
 *  Improved support for forward references
 *
 * @compilearg -XDfwdRefOpt=onreplace
 * @compile jfxc4173sub.fx
 * @test/warning
 */
